- The file system browser's 'Encoding' menu did not work at all.

- Adding a mode to the user modes directory with the same name as one in
  the system directory would not take effect until jEdit was restarted.

- Abbreviations whose expansions started with the text "<html>" could
  cause problems since Swing automatically tries to display such strings
  as HTML. A workaround has now been added.

+ API Changes:

- Buffer.getFile() method deprecated. Use Buffer.getPath() and the VFS
  API instead.

* Version 4.1pre2

Thanks to Alexander Maryanovsky and Gerd Knops for contributing to this
release.

+ Editing Changes:

- The 'Smart Home/End' setting has been split into two separate
  settings, one for Home and one for End.

- Made behavior of mouse in gutter more customizable. (Gerd Knops)

- Added option to make double-click drag treat each non-alphanumeric
  character as one word. (Gerd Knops)

- Added an option to not hide the final end of line character of a
  buffer.

+ Syntax Highlighting Changes:

- Syntax rules can now specify the AT_WHITESPACE_END attribute. If this
  is set to TRUE, then the rule will only match if it is the first
  non-whitespace text in the line.

- Fixed minor highlighting problem with properties mode.

+ File System Browser Changes:

- Multiple files can now be selected in the stand-alone browser;
  right-clicking no longer deselects all but the clicked file.

- Added 'Open in New Split' command to the right-click menu that splits
  the view and opens the selected file in the newly created text area.

- Right-click menus in the 'Open File' dialog box now contain menu items
  for opening files in new views and new splits.

- File->Open With Encoding menu replaced with an 'Encoding' menu in the
  file system browser's 'Commands' menu.

+ Scripting Changes:

- 'scriptPath' BeanShell variable is set to the macro file path while a
  macro or startup script is executing.

- Startup scripts can now be written in any language supported by a